// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comment should be rendered correctly 1`] = `
<div
  className="f12b9rze"
>
  <div
    className="f6deexk"
  >
    <img
      alt="Taro Yamada"
      src="http://lorempixel.com/200/200/cats/"
    />
  </div>
  <div
    className="f8xzse3"
  >
    <div
      className="f1sfq9p6"
    >
      <span>
        Taro Yamada
      </span>
      <small
        className="fq0fzr3"
      >
        午後 18:00
      </small>
    </div>
    <img
      alt="hoge.png"
      src="http://lorempixel.com/200/200/cats/"
    />
    <p>
      hoge
    </p>
  </div>
</div>
`;

exports[`Comment should be rendered correctly without commentedBy 1`] = `
<div
  className="f12b9rze"
>
  <div
    className="f6deexk"
  >
    <div
      className="f1y5k9zg"
    >
      <svg
        fill="currentColor"
        height="1em"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "color": undefined,
            "verticalAlign": "middle",
          }
        }
        viewBox="0 0 40 40"
        width="1em"
      >
        <g>
          <path
            d="m20 33.4c7.3 0 13.4-6.1 13.4-13.4 0-1.3-0.3-2.6-0.6-3.7-1.2 0.3-2.4 0.3-3.7 0.3-5.7 0-10.6-2.7-13.6-7-1.7 4-4.9 7.3-8.8 9-0.1 0.5-0.1 0.9-0.1 1.4 0 7.3 6.1 13.4 13.4 13.4z m0-30c9.2 0 16.6 7.4 16.6 16.6s-7.4 16.6-16.6 16.6-16.6-7.4-16.6-16.6 7.4-16.6 16.6-16.6z m5 16.2c1.2 0 2.1 0.9 2.1 2s-0.9 2.2-2.1 2.2-2.1-1-2.1-2.2 0.9-2 2.1-2z m-10 0c1.2 0 2.1 0.9 2.1 2s-0.9 2.2-2.1 2.2-2.1-1-2.1-2.2 0.9-2 2.1-2z"
          />
        </g>
      </svg>
    </div>
  </div>
  <div
    className="f8xzse3"
  >
    <div
      className="f1sfq9p6"
    >
      <span>
        Anonymous
      </span>
      <small
        className="fq0fzr3"
      >
        午後 18:00
      </small>
    </div>
    <img
      alt="hoge.png"
      src="http://lorempixel.com/200/200/cats/"
    />
    <p>
      hoge
    </p>
  </div>
</div>
`;
